--- a/src/app/views/cards/info-modal/info-modal.component.html
+++ b/src/app/views/cards/info-modal/info-modal.component.html
@@ -46,6 +46,9 @@
           <mat-icon>highlight_off</mat-icon>
         </button>
       </mat-card-actions>
+      <button mat-raised-button (click)="onNoClick();">
+        Finished. Bring me back!
+      </button>
     </div>
     <div id="map" class="map"></div>
   </mat-card-content>
