--- a/src/app/views/cards/info-modal/info-modal.component.html
+++ b/src/app/views/cards/info-modal/info-modal.component.html
@@ -34,7 +34,7 @@
         <button mat-icon-button (click)="toggleEditMode();">
           <mat-icon>mode_edit</mat-icon>
         </button>
-        <button mat-icon-button>
+        <button mat-icon-button (click)="openConfirmationDialog()">
           <mat-icon>delete</mat-icon>
         </button>
       </mat-card-actions>
