Improve delete workflow

--- a/src/app/views/cards/info-modal/info-modal.component.html
+++ b/src/app/views/cards/info-modal/info-modal.component.html
@@ -46,7 +46,7 @@
           <mat-icon>highlight_off</mat-icon>
         </button>
       </mat-card-actions>
-      <button mat-raised-button (click)="onNoClick();">
+      <button mat-raised-button (click)="onNoClick(false);">
         Finished. Bring me back!
       </button>
     </div>
