Update stuff to match new API version

--- a/src/app/views/cards/info-modal/info-modal.component.html
+++ b/src/app/views/cards/info-modal/info-modal.component.html
@@ -1,6 +1,6 @@
 <mat-card>
   <mat-card-content>
-    <img class="image" mat-card-image class="image" [src]="marker.image_base64">
+    <img class="image" mat-card-image class="image" [src]="marker.image_url">
     <div class="infos">
       <div *ngIf="!editMode">
         <span fxFlex="100%">Id: {{marker.id}}</span>
