--- a/src/app/views/cards/cards.component.html
+++ b/src/app/views/cards/cards.component.html
@@ -7,7 +7,7 @@
       <span [ngStyle]="{'color': (marker.visible ? 'green' : 'red')}" fxFlex="100%">{{convertEpocToReadableDate(marker.timestamp)}}</span>
     </mat-card-subtitle>
     <mat-card-content>
-      <img mat-card-image class="image" [src]="marker.image_base64">
+      <img mat-card-image class="image" [src]="marker.image_url">
     </mat-card-content>
     <!-- <mat-card-actions>
       <mat-icon fxFlex="10%">mode_edit</mat-icon>
