--- a/src/app/views/cards/cards.component.html
+++ b/src/app/views/cards/cards.component.html
@@ -15,6 +15,6 @@
     </mat-card-actions> -->
   </mat-card>
 </div>
-<div *ngIf="loading">
-  ... LOADING ...
+<div class="center-items" *ngIf="loading">
+  <mat-spinner></mat-spinner>
 </div>
